--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/three": "^0.160.0",
     "date-fns": "^3.3.1",
     "leva": "^0.9.35",
+    "maath": "^0.10.7",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
