--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.96.1",
     "@react-three/fiber": "^8.15.14",
+    "@react-three/postprocessing": "^2.15.13",
     "@types/three": "^0.160.0",
     "date-fns": "^3.3.1",
     "leva": "^0.9.35",
